Update CSharp Answers

--- a/CSharp/DataTypesAndVariables.Answers/DataTypesAndVariables.Answers.csproj
+++ b/CSharp/DataTypesAndVariables.Answers/DataTypesAndVariables.Answers.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3ACC2495-5AF4-4EF7-91C4-61619802F633}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DataTypesAndVariables.Answers</RootNamespace>
     <AssemblyName>DataTypesAndVariables.Answers</AssemblyName>
@@ -28,6 +28,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>DataTypesAndVariables.Answers.Loops</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
