--- a/oopExamples/Inheritance_Tomogatchi/Inheritance_Tomogatchi.csproj
+++ b/oopExamples/Inheritance_Tomogatchi/Inheritance_Tomogatchi.csproj
@@ -42,11 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pikachu.cs" />
-    <Compile Include="GameObject.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Answer\Pikachu.cs" />
+    <Compile Include="Answer\GameObject.cs" />
+    <Compile Include="Answer\Program.cs" />
+    <Compile Include="Problem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tomogatchi.cs" />
+    <Compile Include="Answer\Tomogatchi.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
