Added accessmodifier examples and answers

--- a/CSharp/DataTypesAndVariables.Answers/DataTypesAndVariables.Answers.csproj
+++ b/CSharp/DataTypesAndVariables.Answers/DataTypesAndVariables.Answers.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessModifiers.cs" />
+    <Compile Include="AccessModifiersAnswers.cs" />
     <Compile Include="Classes.cs" />
     <Compile Include="Collections.cs" />
     <Compile Include="DiffNamespace\Animal.cs" />
