--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
-* text=auto
+# Disable LF normalization for all files
+* -text
 
 ###############################################################################
 # Set default behavior for command prompt diff.
