Update web.config to use relative paths.

--- a/SampleProject/SampleSolution/WebApiProject/Web.config
+++ b/SampleProject/SampleSolution/WebApiProject/Web.config
@@ -9,7 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ExperienceITDatabaseConnectionString" connectionString="Data Source=(localdb)\ProjectsV13;Initial Catalog=ExperienceITDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient" /><add name="ExperienceITDatabaseEntities" connectionString="metadata=res://*/DBContext.ExperienceITEntities.csdl|res://*/DBContext.ExperienceITEntities.ssdl|res://*/DBContext.ExperienceITEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\ProjectsV13;initial catalog=ExperienceITDatabase;integrated security=True;multipleactiveresultsets=True;connect timeout=30;encrypt=False;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="AdventureWorksEntities" connectionString="metadata=res://*/DBContext.AdventureWorksEntitiyDataModel.csdl|res://*/DBContext.AdventureWorksEntitiyDataModel.ssdl|res://*/DBContext.AdventureWorksEntitiyDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\AdventureWorks.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="ExperienceITDatabaseConnectionString"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ExperienceIT.mdf;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+    <add name="ExperienceITDatabaseEntities" 
+         connectionString="metadata=res://*/DBContext.ExperienceITEntities.csdl|res://*/DBContext.ExperienceITEntities.ssdl|res://*/DBContext.ExperienceITEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ExperienceIT.mdf;Integrated Security=True;multipleactiveresultsets=True;connect timeout=30;encrypt=False;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AdventureWorksEntities" 
+         connectionString="metadata=res://*/DBContext.AdventureWorksEntitiyDataModel.csdl|res://*/DBContext.AdventureWorksEntitiyDataModel.ssdl|res://*/DBContext.AdventureWorksEntitiyDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\AdventureWorks.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
