Test out Numbers.

--- a/CSharp/DataTypesAndVariables.Answers/DataTypesAndVariables.Answers.csproj
+++ b/CSharp/DataTypesAndVariables.Answers/DataTypesAndVariables.Answers.csproj
@@ -30,7 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DataTypesAndVariables.Answers.Loops</StartupObject>
+    <StartupObject>DataTypesAndVariables.Answers.NumbersAnswers</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
